# DriftCLI

./: .gitignore  Cargo.toml  README.md  README_CN.md
crates/drift-cli/: Cargo.toml
crates/drift-cli/src/: bridge.rs  bridge_tests.rs  command.rs  main.rs
crates/drift-config/: Cargo.toml
crates/drift-config/src/: lib.rs  load.rs  mcp.rs  persist.rs  provider.rs  tests.rs
crates/drift-core/: Cargo.toml
crates/drift-core/src/: agent.rs  context.rs  event.rs  lib.rs
crates/drift-core/src/agent/: history.rs  provider.rs  tests.rs  turn.rs
crates/drift-core/src/context/: compaction_tests.rs  tests.rs
crates/drift-llm/: Cargo.toml
crates/drift-llm/src/: anthropic.rs  lib.rs  llm_tests.rs  openai_compat.rs  openai_compat_tests.rs  types.rs
crates/drift-mcp/: Cargo.toml
crates/drift-mcp/src/: lib.rs  mcp_tests.rs
crates/drift-mcp/tests/: stdio.rs
crates/drift-mcp/tests/support/: stdio_server.rs
crates/drift-plugin/: Cargo.toml
crates/drift-plugin/src/: lib.rs
crates/drift-security/: Cargo.toml
crates/drift-security/src/: circuit.rs  engine.rs  engine_tests.rs  guard.rs  guard_tests.rs  lib.rs  network.rs  network_tests.rs  pattern.rs  pattern_tests.rs  redact.rs  redact_tests.rs  sandbox.rs  sandbox_tests.rs  types.rs
crates/drift-storage/: Cargo.toml
crates/drift-storage/src/: lib.rs  storage_tests.rs
crates/drift-tools/: Cargo.toml
crates/drift-tools/src/: lib.rs  registry_tests.rs
crates/drift-tools/src/tools/: bash.rs  edit.rs  glob.rs  glob_tests.rs  grep.rs  mod.rs  read.rs  todowrite.rs  webfetch.rs  websearch.rs  websearch_tests.rs  write.rs
crates/drift-tui/: Cargo.toml
crates/drift-tui/src/: connect.rs  input.rs  lib.rs  markdown.rs  markdown_tests.rs  runtime.rs  selection.rs  slash.rs  tui_tests.rs  update.rs  view.rs
crates/drift-tui/src/components/: mod.rs
