[package]
name = "drift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
drift-storage = { path = "../drift-storage" }
uuid = { workspace = true, features = ["v4"] }
clap.workspace = true
drift-config = { path = "../drift-config" }
drift-core = { path = "../drift-core" }
drift-tools = { path = "../drift-tools" }
drift-mcp = { path = "../drift-mcp" }
drift-security = { path = "../drift-security" }
drift-tui = { path = "../drift-tui" }
anyhow.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
