[package]
name = "drift-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drift-storage = { path = "../drift-storage" }
drift-config = { path = "../drift-config" }
drift-llm = { path = "../drift-llm" }
drift-tools = { path = "../drift-tools" }
drift-security = { path = "../drift-security" }
tokio = { workspace = true, features = ["sync", "macros"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-stream = "0.1"
