[package]
name = "drift-llm"
version.workspace = true
edition.workspace = true

[dependencies]
drift-config = { path = "../drift-config" }
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
pin-project-lite = "0.2"
tracing = { workspace = true }
