[package]
name = "drift-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
directories.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
