[package]
name = "drift-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drift-security = { path = "../drift-security" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
regex = "1"
walkdir = "2"
glob = "0.3"
